@@ -1,5 +1,6 @@
 Changes in Version 1.6.3
   - Updated warning message for when the densest network is selected.
+  - Added an option countDiagonalPars to ggmFit to count diagonal of the network as parameters, now set to TRUE by default.
   
 Changes in Version 1.6.2
   - Fixed a bug in centralityPlot
